--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,8 +61,13 @@ body{
     height: 100vh;
     width: 100%;
     position: fixed;
-    z-index: -1;
     background-color: rgba(0, 0, 0, 0.801);
+}
+.particlesClass0{
+    z-index: -1;
+}
+.particlesClass1{
+    z-index: 2;
 }
 #main{
     background-color:#8c52ffa8;
@@ -179,7 +184,7 @@ body{
     padding: 6vh;
     margin-bottom: 10vh;
 }
-#particles button {
+#particles .btn-interact{
     padding: 4vh;
     color: rgb(197, 197, 197);
     background-color:  rgba(0, 0, 0, 0.705);
@@ -189,11 +194,18 @@ body{
     cursor: pointer;
     border: none;
     transition: 0.25s;
+    z-index: 3;
 }
-#particles button:hover{
+#particles .btn-interact:hover{
     background-color: #8c52ffa8;
     transition: 0.25s;
 }
+/* .btn-interact{
+    z-index: 0;
+}
+.btn-interact0{
+    z-index: 3;
+} */
 @media (max-width: 1350px){
     #header ul{
         gap: 1vh;
