--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,10 @@ body{
 #header img{
     height: 10vh;
 }
-#header ul{
+#header .menuV a, .menuV0 a{
+    cursor: pointer;
+}
+#header .menuV, .menuV0{
     font-size: 2.22vh;
     list-style: none;
     display: flex;
@@ -44,17 +47,52 @@ body{
     justify-content: center;
     align-items: center;
 }
-#header ul a{
+#header .menuV a, .menuV0 a{
     text-decoration: none;
     color: rgb(197, 197, 197);
-    padding: 1vh 3vh;
+    padding: 1.5vh 3vh;
     border: 0;
     background: none;
     transition: 0.15s ease;
+    position: relative;
 }
-#header ul a:hover,::after{
-    transition: 0.15s ease;
-    border-bottom: solid rgb(197, 197, 197);
+#header .menuV a::before, .menuV0 a::before{
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background-color: rgb(197, 197, 197);
+    position:absolute;
+    left: 0;
+    bottom: 0;
+}
+#header .menuV a:hover:before, .menuV a:hover:before{
+    animation-name: borde;
+    animation-duration: .5s;
+    animation-direction: alternate;
+    animation-fill-mode: forwards;
+}
+#header .menuI img{
+    height: 5vh;
+}
+#header .menuI{
+    display: none;
+}
+
+@keyframes borde{
+    0%{
+        background-color: #8c52ff  ;
+        width: 0;
+
+    }
+    99%{
+        background-color: #8c52ff  ;
+        width: 99%;
+    }
+    100%{
+        background-color: rgb(197, 197, 197);
+        width: 100%;
+    }
 }
 #particles-js{
     display: flex;
@@ -85,11 +123,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40vh;
+    gap: 10vh;
     font-size: 2.5vh;
     padding: 10vh;
 }
 #nav{
+    margin: 20vh 0;
     padding-left: 20vh;
     background-color: rgba(0, 0, 0, 0.705);
     height: 40vh;
@@ -101,18 +140,23 @@ body{
     font-size: 2vh;
 }
 #nav .techSkills{
-    display: flex;
-    flex-direction:row;
+    display: grid;
+    width: 38%;
+    grid-template-areas: 
+    "html input"
+    "css input"
+    "js input"
+    "bs input"
+    "sass input";
     gap: 5vh;
+    background-color: rgba(217, 217, 217, 0.74);
+    padding: 4.5vh;
+    border-radius: 30px;
+    box-shadow:10px 5px 35px rgba(0, 0, 0, 0.73);
 }
+
 #nav .techSkills img{
     height: 7.5vh;
-}
-#nav .techSkills input{
-    color: white;
-    display: flex;
-    flex-direction: column;
-
 }
 #projects{
     display: flex;
@@ -200,23 +244,235 @@ body{
     background-color: #8c52ffa8;
     transition: 0.25s;
 }
-/* .btn-interact{
-    z-index: 0;
+.idioma0{
+    display: none;
 }
-.btn-interact0{
-    z-index: 3;
-} */
+.idioma{
+    position: fixed;
+    display: flex;
+    gap: 50%;
+    z-index: 100;
+    justify-content: start;
+    align-items: center;
+    padding-left: 15vh;
+    background-color: rgba(41, 41, 41, 0.9);
+    width: 100%;
+    height: 100%;
+}
+.idioma .btn-idiom{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 15vh;
+}
+.idioma img{
+    height: 3vh;
+    cursor: pointer;
+}
+.idioma a{
+    text-decoration: none;
+    padding: 4vh;
+    color: rgb(197, 197, 197);
+    background-color:  rgba(0, 0, 0, 0.705);
+    box-shadow: 10px 5px 10px rgb(0, 0, 0);
+    border-radius: 20px;
+    font-size: 2vh;
+    cursor: pointer;
+    border: none;
+    transition: 0.25s;
+}
+.idioma a:hover{
+    background-color: #8c52ffa8;
+    transition: 0.25s;
+}
 @media (max-width: 1350px){
-    #header ul{
+    #header .menuV{
         gap: 1vh;
-        font-size: 2vh;
+        font-size: 1.8vh;
     }
     #main{
         margin: 10vh 20vh;
     }
     #main .presentation{
+        gap: 10vh;
+    }
+    #projects{
+        gap: 5vh;
+    }
+}
+@media (max-width: 1130px){
+    #main{
+        margin: 7vh 10vh;
+    }
+    #main .presentation{
+        font-size: 2vh;
+    }
+    #nav{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center;
+        margin: 10vh 0;
+        padding: 0;
+        background: none;
+        gap: 8vh;
+    }
+    #nav .portfolio{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.705);
+        width: 100%;
+        height: 20vh;
+    }
+    #nav .techSkills{
+        width: 60%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 21%;
+        justify-content: center;
+        align-items: center;
+    }
+    #projects{
+        display: grid;
+        margin-top: 70vh;
+    }
+    #projects .projects-done-tittle{
+        margin: 0 10%;
+    }
+}
+@media (max-width:980px){
+    #header .menuI{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        cursor: pointer;
+        list-style: none;
+    }
+    #header .menuV{
+        display: none;
+    }
+    #header .menuV0{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        margin: 0;
+        left: 0;
+        width: 100%;
+        padding: 3vh;
+        background-color: rgba(0, 0, 0, 0.89);
+    }
+    #header .menuV0 a:hover:before{
+        animation: none;
+        background: none;
+    }
+    #header .menuV0 li{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #main{
+        margin: 5vh 7vh;
+    }
+
+}
+@media (max-width:900px){
+    #projects .projects-done-tittle{
+        padding: 2vh;
+    }
+    #projects .projects-done{
+        gap: 10vh;
+        padding: 5vh;
+    }
+    #projects .projects-done .non-projects a img{
+        height: 10vh;
+    }
+    #projects .projects-done a img{
+        height: 18vh;
+    }
+}
+@media (max-width:740px){
+    #projects .projects-done-tittle{
         font-size: 1.5vh;
-        gap: 20vh;
-        text-align:justify;
+    }
+    #main .presentation{
+        font-size: 1.5vh;
+        padding: 2vh;
+    }
+    #header img{
+        height: 8vh;
+    }
+    #nav .portfolio{
+        height: 15vh;
+        font-size: 1.5vh;
+    }
+    #nav .techSkills img{
+        height: 5vh;
+    }
+    #projects{
+        margin-top: 50vh;
+    }
+    #particles .particlesInteract{
+        font-size: 1.5vh;
+        padding: 3vh;
+    }
+}
+@media (max-width:600px){
+    #main .presentation{
+        display: grid;
+        grid-template-columns: repeat(1 1fr);
+        padding: 0 2vh;
+        justify-content: center;
+        align-items: center;
+    }
+    #header img{
+        height: 6vh;
+    }
+    #header .menuI img{
+        height: 3.5vh;
+    }
+    #projects .projects-done a img{
+        height: 15vh;
+    }
+    #footer a img{
+        height: 3.5vh;
+    }
+}
+@media (max-width:550px){
+    
+    #nav .techSkills{
+        margin: 0;
+        width: 100%;
+    }
+    #projects{
+        margin: 50vh 0;
+        margin-bottom: 10vh;
+    }
+    #projects .projects-done-tittle{
+        height: 9vh;
+    }
+    #projects .projects-done{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    #projects .projects-done a img{
+        height: 20vh;
+    }
+}
+@media (max-width:370px){
+    #main .presentation{
+        font-size: 1.28vh;
+    }
+}
+@media (max-width:310px){
+    #main .presentation{
+        font-size: 1.1vh;
+        padding: 2vh;
+    }
+    #projects .projects-done a img{
+        height: 15vh;
     }
 }
